apps/leaven/leaven-onair/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leaven-onair
  namespace: leaven
  labels:
    app: leaven-onair
spec:
  selector:
    matchLabels:
      app: leaven-onair
  template:
    metadata:
      labels:
        app: leaven-onair
    spec:
      containers:
      - name: leaven-onair
        image: hyeonwoo5342/leaven-onair:29
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: '20Mi'
            cpu: '10m'
          requests:
            memory: '20Mi'
            cpu: '10m'
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
      imagePullSecrets:
      - name: dockerhub-secret
