apps/leaven/leaven-onair/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: leaven-onair
  namespace: leaven
  labels:
    app: leaven-onair
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: leaven-onair
