apps/leaven/leaven-onair/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leaven-onair-ingress
  namespace: leaven
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: onair.leaven.team
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: leaven-onair
            port:
              number: 80
